# newclear

./: .gitignore  README.md  full-check.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
newclear/: aggregate.py  buffer.py  cli_generator.py  command_generator.py  generator.py  group_generator.py  instance.py  instances.py  main.py  output.py  region.py  region_instance.py
unity/: __init__.py  aggregate.py  flavor.py  instance.py  instances.py  region.py
