[tool.poetry]
name = "newclear"
version = "0.1.0"
description = "New style CLI builder"
authors = ["Adrien Pensart <crunchengine@gmail.com>"]

[tool.poetry.scripts]
newclear = 'newclear.main:main'

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
defopt = "^6.0.1"
makefun = "^1.9.3"
click-skeleton = "^0.15"
returns = "^0.16.0"
inflection = "^0.5.1"
ordered-set = "^4.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pylint = "^2.6.0"
poetry2setup = "^1.0.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
jobs = 4
[tool.pylint.messages_control]
disable = """
disable=too-few-public-methods,logging-format-interpolation,line-too-long,too-many-arguments,protected-access,missing-docstring,invalid-name,too-many-public-methods,too-many-instance-attributes,duplicate-code,too-many-nested-blocks,too-many-branches,too-many-return-statements,too-many-statements,too-many-locals,too-few-public-methods,too-many-ancestors,abstract-method,anomalous-backslash-in-string,import-outside-toplevel,redefined-outer-name,unnecessary-lambda,c-extension-no-member,logging-fstring-interpolation
"""

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
